--- a/provisioning/roles/nginx/templates/default.j2
+++ b/provisioning/roles/nginx/templates/default.j2
@@ -20,7 +20,7 @@
 server {
 	#listen   80; ## listen for ipv4; this line is default and implied
 	#listen   [::]:80 default_server ipv6only=on; ## listen for ipv6
-
+    listen 80 default_server;
 	root /usr/share/nginx/www;
 	index index.php index.html index.htm;
 
